# ingestion_pipe_test

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  dockerfile  general.py  ingest.py  main.py  makefile  output.py  pyproject.toml  readme.md  runner.py
data/: modified_data.csv  original_data.csv
ingestion/: models.py  runner.py  source.py  target.py
notebooks/: check_data.ipynb
